trunk/Archive2/dc/2be64a15818f68/output
main.cpp:6:25: error: 'const int Outer::Inner::i' is private
        static int const i = 0;
                         ^
main.cpp:9:37: error: within this context
         static int const j = Inner::i;
                                     ^
